# aneu_repo

./: .gitignore  SSH_key.txt  SSH_key.txt.pub  main.py  pyproject.toml  topaneu_to_rsna_mapping.json  y.csv
src/: classification_pipeline.py  data_explorer.py  extracting_features_pipeline.py  preprocessing.py  test.ipynb  test.py
